[workspace]
members = ["src/*", "examples/src/*"]
resolver = "2"

[workspace.dependencies]
ic-cdk = "^0.18.4"
candid = "^0.10.14"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
mime = "^0.3.17"
validator = { version = "^0.20", features = ["derive"] }
serde-aux = "^4.7.0"
serde_bytes = "^0.11.17"
ructe = { version = "^0.18.2", features = ["mime03"] }
matchit = "^0.8.6"
dyn-clone = "^1.0.19"
tokio.workspace = { version = "^1.36.0", features = ["full"] }