[package]
name = "ic-pluto"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["pu0238 <pu0238@protonmail.com>"]
description = "HTTP router & SSR tool for the Internet Computer."
keywords = ["internet-computer", "types", "dfinity", "canister", "router"]
readme = "../../README.md"
include = ["../../README.md", "src", "Cargo.toml", "../../LICENSE"]
homepage = "https://crates.io/crates/ic-cdk"
documentation = "https://docs.rs/ic-pluto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
matchit = "0.8.6"
serde_json = "1.0.140"
dyn-clone = "1.0.19"
url = "2.5.4"
ic-http-certification = "3.0.3"
ic-cdk = "0.18.4"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }

